# Salespersonmodel365days

./: app.py  main.py  model.joblib  prdctslsvatlstngsumry.csv  prdctslsvatlstngsumry.xls  pyproject.toml
